[gd_scene load_steps=6 format=3 uid="uid://d013kh7ud6lmp"]

[ext_resource type="Script" path="res://scenes/open.gd" id="1_t6h2o"]
[ext_resource type="Script" path="res://scenes/animation_player.gd" id="2_x4022"]
[ext_resource type="Script" path="res://scenes/update_loop_list.gd" id="3_cppjx"]
[ext_resource type="Script" path="res://scenes/range_buttons.gd" id="4_k4hjd"]
[ext_resource type="Script" path="res://scenes/save.gd" id="5_3rfeo"]

[node name="Game" type="Node2D"]

[node name="AnimList" type="ItemList" parent="."]
unique_name_in_owner = true
offset_left = 23.0
offset_top = 93.0
offset_right = 289.0
offset_bottom = 588.0

[node name="LoopList" type="ItemList" parent="."]
unique_name_in_owner = true
offset_left = 309.0
offset_top = 91.0
offset_right = 503.0
offset_bottom = 586.0

[node name="Nodes" type="ItemList" parent="."]
unique_name_in_owner = true
offset_left = 845.0
offset_top = 93.0
offset_right = 1111.0
offset_bottom = 588.0

[node name="Label" type="Label" parent="."]
offset_left = 64.0
offset_top = 606.0
offset_right = 104.0
offset_bottom = 629.0
text = "Animations"

[node name="Label2" type="Label" parent="."]
offset_left = 941.0
offset_top = 57.0
offset_right = 1030.0
offset_bottom = 80.0
text = "Nodes"

[node name="Pick" type="Button" parent="."]
offset_left = 927.0
offset_top = 16.0
offset_right = 1043.0
offset_bottom = 47.0
text = "LOAD FILE"

[node name="ANIM" type="Node" parent="."]
unique_name_in_owner = true

[node name="Open" type="FileDialog" parent="."]
unique_name_in_owner = true
title = "Open a File"
initial_position = 1
size = Vector2i(800, 550)
ok_button_text = "Open"
dialog_hide_on_ok = true
file_mode = 0
access = 2
filters = PackedStringArray("*.tscn")

[node name="CODE" type="Node" parent="."]

[node name="Open" type="Node" parent="CODE"]
script = ExtResource("1_t6h2o")

[node name="AnimationPlayer" type="Node" parent="CODE/Open"]
unique_name_in_owner = true
script = ExtResource("2_x4022")

[node name="UpdateLoopList" type="Node" parent="CODE/Open"]
unique_name_in_owner = true
script = ExtResource("3_cppjx")

[node name="RangeButtons" type="Node" parent="CODE"]
unique_name_in_owner = true
script = ExtResource("4_k4hjd")

[node name="Save" type="Node" parent="CODE"]
script = ExtResource("5_3rfeo")

[node name="Log" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 30.0
offset_top = 17.0
offset_right = 608.0
offset_bottom = 61.0

[node name="Load" type="Button" parent="."]
offset_left = 883.0
offset_top = 598.0
offset_right = 1094.0
offset_bottom = 636.0
text = "LOAD ANIMATION PLAYER"

[node name="Label3" type="Label" parent="."]
offset_left = 346.0
offset_top = 604.0
offset_right = 386.0
offset_bottom = 627.0
text = "Loop Value"

[node name="Label4" type="Label" parent="."]
offset_left = 528.0
offset_top = 542.0
offset_right = 686.0
offset_bottom = 625.0
text = "0 = LOOP NONE (no loop)
1 = LOOP LINEAR (normal loop)
2 = LOOP PINGPONG
(goes forward then backward)"

[node name="SetRangeBegin" type="Button" parent="."]
offset_left = 544.0
offset_top = 98.0
offset_right = 706.0
offset_bottom = 140.0
text = "SET RANGE BEGIN"

[node name="SetRangeEnd" type="Button" parent="."]
offset_left = 544.0
offset_top = 154.0
offset_right = 706.0
offset_bottom = 196.0
text = "SET RANGE END"

[node name="SetSingleAnim" type="Button" parent="."]
offset_left = 548.0
offset_top = 210.0
offset_right = 710.0
offset_bottom = 252.0
text = "SET SINGLE ANIM"

[node name="Batch" type="Button" parent="."]
offset_left = 568.0
offset_top = 350.0
offset_right = 684.0
offset_bottom = 392.0
text = "BATCH"

[node name="BatchSingle" type="Button" parent="."]
offset_left = 554.0
offset_top = 402.0
offset_right = 708.0
offset_bottom = 444.0
text = "BATCH SINGLE"

[node name="LoopTypes" type="OptionButton" parent="."]
unique_name_in_owner = true
offset_left = 562.0
offset_top = 280.0
offset_right = 752.0
offset_bottom = 318.0
selected = 0
item_count = 3
popup/item_0/text = "0 : LOOP NONE"
popup/item_1/text = "1 : LOOP LINEAR"
popup/item_1/id = 1
popup/item_2/text = "2 : LOOP PING PONG"
popup/item_2/id = 2

[node name="Button" type="Button" parent="."]
offset_left = 798.0
offset_top = 16.0
offset_right = 896.0
offset_bottom = 47.0
text = "SAVE FILE"

[node name="Save" type="FileDialog" parent="."]
unique_name_in_owner = true
initial_position = 1
size = Vector2i(800, 550)
dialog_hide_on_ok = true
access = 2
filters = PackedStringArray("*.tscn")

[connection signal="item_selected" from="AnimList" to="CODE/RangeButtons" method="_on_anim_list_item_selected"]
[connection signal="item_selected" from="LoopList" to="CODE/RangeButtons" method="_on_loop_list_item_selected"]
[connection signal="item_selected" from="Nodes" to="CODE/Open" method="_on_nodes_item_selected"]
[connection signal="pressed" from="Pick" to="CODE/Open" method="_on_pick_pressed"]
[connection signal="file_selected" from="Open" to="CODE/Open" method="_on_open_file_selected"]
[connection signal="pressed" from="Load" to="CODE/Open" method="_on_load_pressed"]
[connection signal="pressed" from="SetRangeBegin" to="CODE/RangeButtons" method="_on_set_range_begin_pressed"]
[connection signal="pressed" from="SetRangeEnd" to="CODE/RangeButtons" method="_on_set_range_end_pressed"]
[connection signal="pressed" from="SetSingleAnim" to="CODE/RangeButtons" method="_on_set_single_anim_pressed"]
[connection signal="pressed" from="Batch" to="CODE/RangeButtons" method="_on_batch_pressed"]
[connection signal="pressed" from="BatchSingle" to="CODE/RangeButtons" method="_on_batch_single_pressed"]
[connection signal="item_selected" from="LoopTypes" to="CODE/RangeButtons" method="_on_loop_types_item_selected"]
[connection signal="pressed" from="Button" to="CODE/Save" method="_on_button_pressed"]
[connection signal="file_selected" from="Save" to="CODE/Save" method="_on_save_file_selected"]
